move more functions

--- a/notebooks/exposure/2. get_positive_elev_tiles.ipynb
+++ b/notebooks/exposure/2. get_positive_elev_tiles.ipynb
@@ -16,16 +16,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "\n",
-    "import dask.distributed as dd\n",
     "import geopandas as gpd\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import rhg_compute_tools.kubernetes as rhgk\n",
     "import xarray as xr\n",
-    "from shapely.geometry import box\n",
-    "from shapely.ops import unary_union\n",
     "\n",
     "from sliiders import settings as sset\n",
     "from sliiders import spatial"
@@ -144,80 +139,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_degree_box(row):\n",
-    "    \"\"\"\n",
-    "    Get a 1-degree box containing a centroid\n",
-    "    defined by row[\"lon\"] and row[\"lat\"]\n",
-    "    \"\"\"\n",
-    "    return box(\n",
-    "        row[\"lon\"] - 0.5,\n",
-    "        row[\"lat\"] - 0.5,\n",
-    "        row[\"lon\"] + 0.5,\n",
-    "        row[\"lat\"] + 0.5,\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "def get_tile_names(df, lon_col, lat_col):\n",
-    "    \"\"\"\n",
-    "    Get tile names in the format used by CoastalDEM.\n",
-    "    Defined by the southeastern point's 2-digit degree-distance\n",
-    "    north (N) or south (S) of the equator, and then its 3-digit\n",
-    "    distance east (E) or west (W) of the prime meridian.\n",
-    "    \"\"\"\n",
-    "    tlon = np.floor(df[lon_col]).astype(int)\n",
-    "    tlat = np.floor(df[lat_col]).astype(int)\n",
-    "\n",
-    "    NS = np.where(tlat >= 0, \"N\", \"S\")\n",
-    "    EW = np.where(tlon >= 0, \"E\", \"W\")\n",
-    "\n",
-    "    return (\n",
-    "        NS\n",
-    "        + np.abs(tlat).astype(int).astype(str).str.zfill(2)\n",
-    "        + EW\n",
-    "        + np.abs(tlon).astype(int).astype(str).str.zfill(3)\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "def get_all_exp_tiles(exp_path, filter_field=None):\n",
-    "    \"\"\"\n",
-    "    Get the list of tiles included in an exposure dataset.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    pq_filter = None\n",
-    "    if filter_field is not None:\n",
-    "        pq_filter = [[(filter_field, \">\", 0)]]\n",
-    "\n",
-    "    exp = pd.read_parquet(exp_path, columns=[\"x_ix\", \"y_ix\"], filters=pq_filter)\n",
-    "\n",
-    "    out = spatial.grid_ix_to_val(\n",
-    "        np.stack((exp[\"x_ix\"], exp[\"y_ix\"])).T, cell_size=sset.LITPOP_GRID_WIDTH\n",
-    "    )\n",
-    "\n",
-    "    exp = exp.drop(columns=[\"x_ix\", \"y_ix\"])\n",
-    "    exp[\"lon\"] = np.floor(out[:, 0]).astype(int)\n",
-    "    exp[\"lat\"] = np.floor(out[:, 1]).astype(int)\n",
-    "\n",
-    "    lonlats = exp.drop_duplicates([\"lon\", \"lat\"]).reset_index(drop=True)\n",
-    "\n",
-    "    lonlats[\"londir\"] = np.where(lonlats[\"lon\"] < 0, \"W\", \"E\")\n",
-    "    lonlats[\"latdir\"] = np.where(lonlats[\"lat\"] < 0, \"S\", \"N\")\n",
-    "\n",
-    "    lonlats[\"lonnum\"] = np.abs(lonlats[\"lon\"]).astype(int).astype(str).str.zfill(3)\n",
-    "    lonlats[\"latnum\"] = np.abs(lonlats[\"lat\"]).astype(int).astype(str).str.zfill(2)\n",
-    "\n",
-    "    lonlats[\"tile_name\"] = (\n",
-    "        lonlats[\"latdir\"] + lonlats[\"latnum\"] + lonlats[\"londir\"] + lonlats[\"lonnum\"]\n",
-    "    )\n",
-    "\n",
-    "    return lonlats[\"tile_name\"].values"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -237,15 +158,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tiles[\"tile_name\"] = get_tile_names(tiles, \"lon\", \"lat\")\n",
+    "tiles[\"tile_name\"] = spatial.get_tile_names(tiles, \"lon\", \"lat\")\n",
     "\n",
-    "tiles = gpd.GeoDataFrame(tiles, geometry=tiles.apply(get_degree_box, axis=1))\n",
+    "tiles = gpd.GeoDataFrame(tiles, geometry=tiles.apply(spatial.get_degree_box, axis=1))\n",
     "\n",
     "tiles[\"llat\"] = np.floor(tiles[\"lat\"])\n",
     "tiles[\"llon\"] = np.floor(tiles[\"lon\"])\n",
     "\n",
-    "exp_tiles = get_all_exp_tiles(sset.PATH_EXPOSURE_BLENDED, filter_field=\"value\")\n",
-    "pop_tiles = get_all_exp_tiles(sset.PATH_LANDSCAN_INT, filter_field=\"population\")\n",
+    "exp_tiles = spatial.get_all_exp_tiles(sset.PATH_EXPOSURE_BLENDED, filter_field=\"value\")\n",
+    "pop_tiles = spatial.get_all_exp_tiles(sset.PATH_LANDSCAN_INT, filter_field=\"population\")\n",
     "\n",
     "coastaldem_tiles = [t.stem for t in sset.DIR_COASTALDEM.glob(\"*.tif\")]"
    ]
@@ -440,7 +361,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.10"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
