--- a/notebooks/exposure/nearest_regions/1d. get-coastseg-by-gtsm-point.ipynb
+++ b/notebooks/exposure/nearest_regions/1d. get-coastseg-by-gtsm-point.ipynb
@@ -36,8 +36,7 @@
    "outputs": [],
    "source": [
     "coastal_segs = spatial.get_coastal_segments_by_ciam_site(\n",
-    "    sset.PATH_CIAM_SITES_VORONOI_BY_ISO,\n",
-    "    sset.PATH_CIAM_COASTLINES_BY_ISO\n",
+    "    sset.PATH_CIAM_SITES_VORONOI_BY_ISO, sset.PATH_CIAM_COASTLINES_BY_ISO\n",
     ")"
    ]
   },
