--- a/notebooks/exposure/nearest_regions/2. generate-voronoi-from-gtsm-segments.ipynb
+++ b/notebooks/exposure/nearest_regions/2. generate-voronoi-from-gtsm-segments.ipynb
@@ -30,29 +30,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "5866204b-1983-4424-9aff-f9eb396184b9",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'spatial' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m all_overlays, ciam_polys \u001b[38;5;241m=\u001b[39m \u001b[43mspatial\u001b[49m\u001b[38;5;241m.\u001b[39mgenerate_voronoi_from_segments(\n\u001b[1;32m      2\u001b[0m     sset\u001b[38;5;241m.\u001b[39mPATH_CIAM_COASTLINES_BY_CIAM_SITE,\n\u001b[1;32m      3\u001b[0m     sset\u001b[38;5;241m.\u001b[39mPATH_GADM_ADM1_VORONOI,\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mseg_adm\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124madm1\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      6\u001b[0m )\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'spatial' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "all_overlays, ciam_polys = spatial.generate_voronoi_from_segments(\n",
     "    sset.PATH_CIAM_COASTLINES_BY_CIAM_SITE,\n",
     "    sset.PATH_GADM_ADM1_VORONOI,\n",
     "    \"UID\",\n",
     "    \"seg_adm\",\n",
-    "    \"adm1\"\n",
+    "    \"adm1\",\n",
     ")"
    ]
   },
