rm old worker image refs

--- a/notebooks/country_level_ypk/ypk2_prep_clean.ipynb
+++ b/notebooks/country_level_ypk/ypk2_prep_clean.ipynb
@@ -56,7 +56,7 @@
     "\n",
     "# dask gateway setup\n",
     "gateway = Gateway()\n",
-    "cluster_name = sset.DASK_LATEST_WORKER_IMAGE"
+    "cluster_name = sset.DASK_IMAGE"
    ]
   },
   {
