add more docstrings

--- a/notebooks/exposure/4. generate_exposure_tiles.ipynb
+++ b/notebooks/exposure/4. generate_exposure_tiles.ipynb
@@ -130,13 +130,13 @@
     "        bbox=box(*bbox.buffer(0.1).bounds),\n",
     "    )\n",
     "\n",
-    "    return spatial.get_vor_matches(elev_tile, bbox, seg_adm, \"seg_adm\", \"seg_adm\", None)\n",
+    "    return spatial.get_vor_matches(elev_tile, bbox, seg_adm, \"seg_adm\", \"seg_adm\")\n",
     "\n",
     "\n",
     "@rhgu.block_globals\n",
-    "def match_elev_pixels_to_shapes(elev_tile, this_exp, bbox, sset):\n",
+    "def match_elev_pixels_to_shapes(elev_tile, bbox, sset):\n",
     "\n",
-    "    out_df = get_empty_exp_grid(elev_tile, this_exp, sset.LITPOP_GRID_WIDTH)\n",
+    "    out_df = spatial.get_empty_exp_grid(elev_tile, sset.LITPOP_GRID_WIDTH)\n",
     "\n",
     "    out_df[\"seg_adm\"] = get_seg_adm(elev_tile, bbox, sset)\n",
     "    out_df[\"seg_adm\"] = out_df[\"seg_adm\"].astype(\"category\")\n",
@@ -348,10 +348,6 @@
     "\n",
     "    this_exp = load_exposure(bbox, sset) if calc_exp else None\n",
     "\n",
-    "    # Set the \"higher than coastal\" value. This makes groupby calls faster and reduces\n",
-    "    # memory footprint.\n",
-    "    CAP = sset.HIGHEST_WITHELEV_EXPOSURE_METERS + 1\n",
-    "\n",
     "    if calc_elev:\n",
     "        elev_tile = (\n",
     "            xr.open_rasterio(sset.DIR_MSS / f\"{tile_name}.tif\")\n",
@@ -359,12 +355,12 @@
     "            .drop(\"band\")\n",
     "        )\n",
     "        # Bundle higher-than-coastal elevation values into one to simplify later data processing\n",
-    "        elev_tile = xr.where(elev_tile > CAP, CAP, elev_tile)\n",
+    "        elev_tile = xr.where(elev_tile > sset.ELEV_CAP, sset.ELEV_CAP, elev_tile)\n",
     "    else:\n",
-    "        elev_tile = spatial.get_granular_grid(bbox, cap=CAP)\n",
+    "        elev_tile = spatial.get_granular_grid(bbox)\n",
     "\n",
     "    # match tile points with countries, impact regions, protection zones\n",
-    "    out = match_elev_pixels_to_shapes(elev_tile, this_exp, bbox, sset)\n",
+    "    out = match_elev_pixels_to_shapes(elev_tile, bbox, sset)\n",
     "\n",
     "    # get points on land, assign impact regions and countries at exposure grid level\n",
     "    out, negelev_pts = get_valid_points_df(elev_tile, bbox, out, sset)\n",
