Dask image update

--- a/notebooks/country_level_ypk/ypk6_projected_yp.ipynb
+++ b/notebooks/country_level_ypk/ypk6_projected_yp.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e7e2c13d-e099-4861-999c-13d2d8da51a7",
    "metadata": {},
    "source": [
     "## Clean up and impute missing projected (2010-2100) GDPpc, GDP, and population values"
@@ -11,7 +10,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78887ae8-c469-4248-b886-cae2f9a231a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +20,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a58ff364-b6bd-431a-b4d6-c7b11d471e51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,12 +37,11 @@
     "\n",
     "# dask gateway setup\n",
     "gateway = Gateway()\n",
-    "image_name = sset.DASK_LATEST_WORKER_IMAGE"
+    "image_name = sset.DASK_IMAGE"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "cb1ad6d9-3e1e-4930-8d64-2335bf037e36",
    "metadata": {},
    "source": [
     "## Importing and cleaning SSP-IAM projections\n",
@@ -56,7 +52,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2cd5c54-8cbd-41ee-a59f-8814a08c869b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +66,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b50f5c7-da7c-49d9-a56d-6d80ebaad799",
    "metadata": {},
    "source": [
     "### Population\n",
@@ -84,7 +78,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9257a09-1d0b-4823-97e9-b4128047697f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +100,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d27b24a5-9e62-4cbe-8e44-18cc91f4d7bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +140,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "114700b0-8bb1-401f-9ad6-f15f6d6f7584",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +166,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c53c374b-7816-4c34-89d0-7273df29890f",
    "metadata": {},
    "source": [
     "#### Cleaning up for the case of France\n",
@@ -188,7 +178,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b549fa6b-6943-4dba-ac0d-c101934f5e75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +198,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74d78baf-cc04-4381-8621-853747e0e3ce",
    "metadata": {},
    "source": [
     "The above confirms that OECD cases do include all of the five overseas departments when calculating their population. So we will subtract these values to get the \"mainland France\" population values."
@@ -218,7 +206,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00eebffc-9e8d-4c4c-ae6c-7edb7608a0bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +221,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4908335d-5d31-4781-bb4e-99fd0ef2c556",
    "metadata": {},
    "source": [
     "#### Interpolating, turning into a long-panel format, and taking only the IIASA cases\n",
@@ -245,7 +231,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b4ffab9-6a77-46e8-8b5c-047aea3d4d51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +254,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3d4cf18-324d-4c78-94f4-20512d98760d",
    "metadata": {},
    "source": [
     "#### Detecting those ISOs that are missing, and getting the country-level population estimates for these ISOs (from LandScan 2019)"
@@ -278,7 +262,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0dc5b3b-f4a3-44b3-b683-58384fab58f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +275,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4337c936-5fa5-475f-9d53-e0d264dfe710",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +301,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5aaa58cd-2c1c-4d55-aba6-eedf946234fe",
    "metadata": {},
    "source": [
     "Note that the current shapefile information we are using often has more than one MultiPolygon per ISO code, so we will create a shapefile dataset with one MultiPolygon per ISO code."
@@ -328,7 +309,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb96648b-8e63-46e4-a7d3-455befe3987a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +331,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a265451c-ca8f-452c-b91d-69778d85a9ec",
    "metadata": {},
    "source": [
     "Based on the ISO-relevant shapefiles and grid-level population in LandScan 2019, let us find the country-level population information."
@@ -360,7 +339,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb57e860-d8f5-48b5-ba02-13d353ed4762",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +370,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fe9156f-e11a-469d-a80e-0a8e0e7ecc7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +385,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ae71c8f-da0a-4f28-b38e-3a81d155b817",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +396,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d02ca449-e69b-4bf0-821b-8f2f770c8ef6",
    "metadata": {},
    "source": [
     "#### Attaching LandScan 2019 values to the overall population projections"
@@ -429,7 +404,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6220182a-f73a-4cce-98b5-b861836ac806",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +426,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a925ddf9-7704-4b1b-a3dc-51e499e137de",
    "metadata": {},
    "source": [
     "### GDPpc and GDP\n",
@@ -465,7 +438,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10751dae-3d6c-42a7-8862-862c7d91e072",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +516,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "012801c9-e3df-4107-951e-63c6ccdfbb43",
    "metadata": {},
    "source": [
     "#### Attaching the population values, creating GDPpc, and log-linearly interpolating"
@@ -553,7 +524,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4f37aba-7333-4ab3-a3f2-c1b8a248bb54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +554,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "275b2371-3815-4355-9396-2ae589a11678",
    "metadata": {},
    "source": [
     "#### Getting the by-scenario global GDPpc"
@@ -593,7 +562,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76068d53-09ae-4b5d-9c9e-61cf8c2a4f82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +588,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62dbcb64-05b7-4da0-835e-fa6d8346b463",
    "metadata": {},
    "source": [
     "#### GDPpc for countries that are not in the current projections (subbing in the global GDPpc), and attaching it with the existing projections"
@@ -629,7 +596,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30523a73-509e-4ba4-ae81-987cf3ceacea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +615,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b87ded6-1b9e-4b20-a7ed-df5b496083de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +631,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "656c4942-a9f9-400a-8c39-4bda6683b03a",
    "metadata": {
     "tags": []
    },
@@ -677,7 +641,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cee6f9c8-95de-4be6-a5e1-38d808cc2b58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +657,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32958206-29bc-42d9-b16c-52a5f63322dd",
    "metadata": {},
    "source": [
     "#### Organizing and exporting"
@@ -703,7 +665,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90014b99-5414-4ded-b19b-659f861cf637",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,7 +675,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -728,7 +689,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.8.6"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
