--- a/notebooks/country_level_ypk/ypk7_projected_capital.ipynb
+++ b/notebooks/country_level_ypk/ypk7_projected_capital.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "eecb969f-7e22-405b-b6a5-b5c051a64f8d",
    "metadata": {},
    "source": [
     "## Projecting capital stock values (2010-2100) according to Dellink et al. (2017)"
@@ -11,7 +10,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed4c1018-2050-4857-9f23-f0d1d816baac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +20,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da330f5c-df3b-4712-9f9a-720d4de15069",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,12 +42,11 @@
     "\n",
     "# dask gateway setup\n",
     "gateway = Gateway()\n",
-    "image_name = sset.DASK_LATEST_WORKER_IMAGE"
+    "image_name = sset.DASK_IMAGE"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c1aad301-739a-417f-af8b-97f35e8a0320",
    "metadata": {
     "tags": []
    },
@@ -65,7 +61,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11425855-0e67-49a5-8b35-391844ac697c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +95,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "939c8d28-d637-4204-905e-3fa75be78b88",
    "metadata": {},
    "source": [
     "### Getting the overall GDP elasticity with respect to capital\n",
@@ -111,7 +105,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7de7ea5-f0ea-479d-9b4d-658122b1a756",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +128,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2377638e-381f-4385-abf0-1f71b30f0b2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +137,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b2531a9-a595-42ca-ab67-85992af08059",
    "metadata": {},
    "source": [
     "#### Calculating the initial marginal product of capital (${MPK}_{r, t_0}$, with $t_0 = 2010$) and appending other necessary information\n",
@@ -170,7 +161,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa8008a2-ceae-4636-8fe9-687933736641",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +197,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ddd0bce-f105-4871-9aff-62c416377012",
    "metadata": {},
    "source": [
     "### Using the perpetual inventory method (PIM) with the dynamic parameter equations specified in Dellink et al. (2017)\n",
@@ -220,7 +209,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a565c1bf-cb74-42cf-9a64-a2f4a190ae32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +232,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00e960ed-d038-4580-8a69-7a95c84e27ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +246,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e49cbb3a-27f4-4bd6-951b-a2c814da5074",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +264,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6863ef5-960d-4bca-ad42-c3911fdacb9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +284,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5283d4a0-0eb0-4ec8-a531-0f3c107a4a42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +306,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e59cfbd6-e82b-4097-b260-82ec369b380e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +321,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a4a8671-cb85-42bb-b4f3-6315d53c06f0",
    "metadata": {},
    "source": [
     "### Checking against the Dellink et al. (2017)'s Figure 6 (capital intensity plots)"
@@ -346,7 +328,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2db97de-f756-42c6-b34d-8c93fa28f889",
    "metadata": {},
    "source": [
     "We examine our 6 options as below. After examination with the graph as well as the SSE values, it seems that the case utilizing by-country MPK, **capital-only** production function, and the IIASA overall MPK are the ones that perform the best, at least with the four countries whose information are available.\n",
@@ -357,7 +338,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a8d52fc-da58-429b-a609-6540e2a95afa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +348,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5863f5b7-2b45-433a-8958-b652231ce7c4",
    "metadata": {},
    "source": [
     "For sanity check, we will also graph top ten and bottom cases of capital stock (in natural logarithm) for some specified SSP (SSP3 below) and some year (2100 below)."
@@ -377,7 +356,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16e0935a-cac1-4946-b289-1ffb99fd7080",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +365,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69b1bf9f-0b12-4ed2-af31-161fc505a012",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +373,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b3dfd79-272c-444d-bbc2-b3a4d9d97736",
    "metadata": {},
    "source": [
     "## Re-organizing the dataset and exporting\n",
@@ -407,7 +383,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "508da5c9-a1fe-481f-9793-6b21ceab030a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +428,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16dadd40-2f8d-450a-bb98-173dc33d30de",
    "metadata": {},
    "source": [
     "### Scale creation with respect to historical 2019 values of population and current-PPP (2019 USD) capital stock"
@@ -462,7 +436,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "722947bc-3e7d-4630-ae44-a64ebbb9d8b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +459,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8673624-20aa-4680-8d46-6046e591762c",
    "metadata": {},
    "source": [
     "### Exporting: historical 2019 values"
@@ -495,7 +467,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22a63984-4bf6-469f-bf7c-9778c6b9a586",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +488,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d9a40c3-c15a-48a9-8466-7717a334f2b0",
    "metadata": {},
    "source": [
     "### Exporting: projected values (2010-2100)"
@@ -526,7 +496,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "363de4d7-b8a2-4d93-bf14-05283e166c2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +531,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -576,7 +545,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.8.6"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
