--- a/notebooks/country_level_ypk/ypk1_data_acquisition.ipynb
+++ b/notebooks/country_level_ypk/ypk1_data_acquisition.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5b425579-dfab-4df8-bce3-73683734d6dd",
    "metadata": {},
    "source": [
     "## Data acquisition notebook for historical, country-level GDP (`Y`), population (`P`), and capital (`K`) information\n",
@@ -15,7 +14,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23f38671-5e1f-48c6-a008-4c80aa100a74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +24,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8e64065-36d6-49f3-9802-d9c0939391e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,13 +54,12 @@
     "\n",
     "# dask gateway setup\n",
     "gateway = Gateway()\n",
-    "image_name = sset.DASK_LATEST_WORKER_IMAGE"
+    "image_name = sset.DASK_IMAGE"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "46c424cd-022c-4590-a215-42564de40a86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +71,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "829dd79f-7d44-430d-9210-fa928c7b3683",
    "metadata": {},
    "source": [
     "## Fetching all raw data from various sources\n",
@@ -86,7 +81,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "dee44aa6-4413-4aa0-9a99-c1e0e5ff9227",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +103,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ee3de57-cce6-40a6-b33f-d020ae0091b5",
    "metadata": {},
    "source": [
     "### Maddison Project Dataset"
@@ -118,7 +111,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5a8811da-56e7-43e8-a439-6b6c93d30ae2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +127,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47858fdb-8ca9-4dcf-aa48-97055e178936",
    "metadata": {},
    "source": [
     "### World Bank WDI: Investment-to-GDP ratio, GDP and GDPpc (nominal and PPP), and Population"
@@ -144,7 +135,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "b1116d48-3f5c-4c55-b80a-0101bef7a1ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +182,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0294cbda-982d-4e6f-8e75-17d333ac8eb6",
    "metadata": {},
    "source": [
     "### WB WDI: exchange rate"
@@ -201,7 +190,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "cc9547f7-303c-40b6-b539-25961e4a49bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +214,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d259b214-c59b-40b6-9643-ab37cdf959aa",
    "metadata": {},
    "source": [
     "### UN WPP populations (overall and by-population-group data)"
@@ -235,7 +222,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "66e11a5f-4e06-4420-9f89-21085f1f9d60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +244,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7d39ab6-9471-4e93-a4d6-086307121505",
    "metadata": {},
    "source": [
     "### Åland Island GDP and population\n",
@@ -269,7 +254,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "133ca501-45e7-4030-8b69-432ce57195c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +281,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "198a3257-9232-47c4-93d5-739085394506",
    "metadata": {},
    "source": [
     "### LitPop (Eberenz et al. 2020, Earth Syst. Sci. Data)\n",
@@ -308,7 +291,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "c9377cf2-c306-4a56-b317-dafbed61f689",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +325,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "f3a94f1f-31a5-44f3-9bab-2bb00a2dbfa4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +344,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "461a4f17-7122-4fdd-af33-121d05c6189f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +358,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd6d30b9-aa63-4197-8a00-ffc2de3890a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +369,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "b627b150-bc16-4a93-a3a2-c49d3f1696da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +380,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97c81f17-927a-4631-a65c-82532817c2c0",
    "metadata": {},
    "source": [
     "#### Un-tar and clear storage\n",
@@ -413,7 +390,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "433bbff5-4be2-4086-8cbc-5ab2b37407d9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +404,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cc60b86-3f35-4710-b064-4eac5c375223",
    "metadata": {},
    "source": [
     "### GEG-15\n",
@@ -439,7 +414,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "c55a7c58-deb3-4ff1-8fa4-0c88c4b19b57",
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +456,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "9825c837-4c1a-47ad-90cd-9d65a18c084d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +465,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11068aec-7ef1-426a-b70e-e1f6b55c4e31",
    "metadata": {},
    "source": [
     "## Further data requiring separate instructions\n",
@@ -569,7 +541,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -583,7 +555,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.8.6"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
