--- a/notebooks/country_level_ypk/ypk1_data_acquisition.ipynb
+++ b/notebooks/country_level_ypk/ypk1_data_acquisition.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "5a633b36",
    "metadata": {},
    "source": [
     "## Data acquisition notebook for historical, country-level GDP (`Y`), population (`P`), and capital (`K`) information\n",
@@ -14,6 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "71b0943c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,6 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6ad4b4c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +62,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "id": "292abcee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,6 +75,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b689e589",
    "metadata": {},
    "source": [
     "## Fetching all raw data from various sources\n",
@@ -80,7 +85,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "id": "ca31541c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,6 +109,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7904483c",
    "metadata": {},
    "source": [
     "### Maddison Project Dataset"
@@ -110,7 +117,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
+   "id": "962f910b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,6 +135,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9b5c7e2b",
    "metadata": {},
    "source": [
     "### World Bank WDI: Investment-to-GDP ratio, GDP and GDPpc (nominal and PPP), and Population"
@@ -134,7 +143,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "id": "1f7fc4a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,6 +192,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "661fafde",
    "metadata": {},
    "source": [
     "### WB WDI: exchange rate"
@@ -189,7 +200,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
+   "id": "a7e24127",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,6 +226,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c303c2f6",
    "metadata": {},
    "source": [
     "### UN WPP populations (overall and by-population-group data)"
@@ -221,7 +234,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "id": "81989c12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,6 +258,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "841ddc74",
    "metadata": {},
    "source": [
     "### Åland Island GDP and population\n",
@@ -253,7 +268,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
+   "id": "4ac87613",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,6 +297,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "042246fe",
    "metadata": {},
    "source": [
     "### LitPop (Eberenz et al. 2020, Earth Syst. Sci. Data)\n",
@@ -290,7 +307,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
+   "id": "085d3988",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +342,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
+   "id": "768a01b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,6 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "14020f2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,6 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "eaf7017f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +389,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
+   "id": "d4df4ba3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,6 +402,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a46d327d",
    "metadata": {},
    "source": [
     "#### Un-tar and clear storage\n",
@@ -389,7 +412,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
+   "id": "c83a6bf3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,6 +428,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7ff49b5a",
    "metadata": {},
    "source": [
     "### GEG-15\n",
@@ -413,31 +438,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
+   "id": "60401f3c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Popen: returncode: None args: ['unzip', '/gcs/rhg-data/impactlab-rhg/coasta...>"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Archive:  /gcs/rhg-data/impactlab-rhg/coastal/sliiders/raw/exposure/asset_value/geg15/gar-exp.zip\n",
-      "  inflating: /gcs/rhg-data/impactlab-rhg/coastal/sliiders/raw/exposure/asset_value/geg15/gar-exp/gar_exp.shx  \n",
-      "  inflating: /gcs/rhg-data/impactlab-rhg/coastal/sliiders/raw/exposure/asset_value/geg15/gar-exp/gar_exp.dbf  \n",
-      "  inflating: /gcs/rhg-data/impactlab-rhg/coastal/sliiders/raw/exposure/asset_value/geg15/gar-exp/gar_exp.prj  \n",
-      "  inflating: /gcs/rhg-data/impactlab-rhg/coastal/sliiders/raw/exposure/asset_value/geg15/gar-exp/gar_exp.shp  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# downloading\n",
     "zip_url = (\n",
@@ -455,7 +459,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
+   "id": "db25a5ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,6 +470,37 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8f1fed1c-5a24-4ee6-bfdd-39ec665a0311",
+   "metadata": {},
+   "source": [
+    "### Global Wealth Databook (from Credit Suisse)\n",
+    "\n",
+    "We download the 2021 vintage (latest as of 2022-03-21)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a95c3564-6c45-46d9-9ae4-120e491b9505",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## gathering the files; 2020 databook is missing\n",
+    "BASE_URL_GWDB = (\n",
+    "    \"https://www.credit-suisse.com/media/assets/corporate/docs/about-us/research\"\n",
+    "    \"/publications/{}\"\n",
+    ")\n",
+    "\n",
+    "GWDB2021_PDFNAME = \"global-wealth-databook-2021.pdf\"\n",
+    "gwr_raw = urequest.urlopen(BASE_URL_GWDB.format(GWDB2021_PDFNAME))\n",
+    "file = open(str(sset.DIR_GLOBAL_WEALTH_RAW / GWDB2021_PDFNAME), \"wb\")\n",
+    "file.write(gwr_raw.read())\n",
+    "file.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36d0ff0c",
    "metadata": {},
    "source": [
     "## Further data requiring separate instructions\n",
@@ -541,7 +577,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -555,7 +591,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.10"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
