--- a/notebooks/country_level_ypk/ypk1_data_acquisition.ipynb
+++ b/notebooks/country_level_ypk/ypk1_data_acquisition.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "7f8434e5",
    "metadata": {},
    "source": [
     "## Data acquisition notebook for historical, country-level GDP (`Y`), population (`P`), and capital (`K`) information\n",
     "\n",
-    "In the SLIDERS workflow, historical information is only used for generating the initial (i.e., year 2010) capital stock values and creating capital and population ratios with respect to a reference year (in our case, 2019). To have some degree of usable information, we will gather and organize historical information for 1950-2019 period. In this notebook, we acquire data from various sources that will be used for this workflow.\n",
+    "In the SLIIDERS workflow, historical information is only used for generating the initial (i.e., year 2010) capital stock values and creating capital and population ratios with respect to a reference year (in our case, 2019). To have some degree of usable information, we will gather and organize historical information for 1950-2019 period. In this notebook, we acquire data from various sources that will be used for this workflow.\n",
     "\n",
     "## Importing necessary modules and functions"
    ]
@@ -14,6 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d05b5b3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,6 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0cdf836f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,6 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "3fa8d28f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,6 +75,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a44f2ddf",
    "metadata": {},
    "source": [
     "## Fetching all raw data from various sources\n",
@@ -81,6 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "20114cbe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,6 +109,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "64fe1c6b",
    "metadata": {},
    "source": [
     "### Maddison Project Dataset"
@@ -111,6 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "50241d34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,6 +135,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b958f568",
    "metadata": {},
    "source": [
     "### World Bank WDI: Investment-to-GDP ratio, GDP and GDPpc (nominal and PPP), and Population"
@@ -135,6 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "659e2a02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,6 +192,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4a9ec2a4",
    "metadata": {},
    "source": [
     "### WB WDI: exchange rate"
@@ -190,6 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "791d898a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,6 +226,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3cb820a4",
    "metadata": {},
    "source": [
     "### UN WPP populations (overall and by-population-group data)"
@@ -222,6 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "b69332e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,6 +258,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "419f6f10",
    "metadata": {},
    "source": [
     "### Åland Island GDP and population\n",
@@ -254,6 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "ea205c06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,6 +297,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d085b65c",
    "metadata": {},
    "source": [
     "### LitPop (Eberenz et al. 2020, Earth Syst. Sci. Data)\n",
@@ -291,6 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "1f6e6c1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,6 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "75ec5d7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,6 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7154bcdb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,6 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a68eb42e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,6 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "f4efa181",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,6 +402,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "60950349",
    "metadata": {},
    "source": [
     "#### Un-tar and clear storage\n",
@@ -390,6 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
+   "id": "0dfebf54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,6 +428,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "01eaf623",
    "metadata": {},
    "source": [
     "### GEG-15\n",
@@ -414,6 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "d086ef8f",
    "metadata": {},
    "outputs": [
     {
@@ -456,6 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
+   "id": "96e6f728",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,9 +492,10 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e416964d",
    "metadata": {},
    "source": [
-    "## Further data requiring separate instructions\n",
+    "## Further data requiring separate manual instructions\n",
     "\n",
     "In all cases, we will download these in the directory specified in `sset.DIR_YPK_RAW`.\n",
     "\n",
@@ -541,7 +569,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
