minor fix when using the World Bank ICP 2017 file

--- a/notebooks/create-SLIIDERS-ECON/create-SLIIDERS-ECON.ipynb
+++ b/notebooks/create-SLIIDERS-ECON/create-SLIIDERS-ECON.ipynb
@@ -775,14 +775,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import World Bank Int'l Comparison Project [2017] table, use as 1st-preference CCI vals\n",
-    "icp = pd.read_csv(PATH_EXPOSURE_WB_ICP).rename(\n",
-    "    columns={\n",
-    "        \"Country Code\": \"country\",\n",
-    "        \"1501200:CONSTRUCTION [1501200]\": \"wbcci\",\n",
-    "    }\n",
+    "# Import World Bank Int'l Comparison Project [2017] table\n",
+    "# to be used as 1st-preference CCI vals; along with minor clean-up\n",
+    "icp = (\n",
+    "    pd.read_csv(PATH_EXPOSURE_WB_ICP)\n",
+    "    .iloc[1:]\n",
+    "    .rename(\n",
+    "        columns={\n",
+    "            \"Country Code\": \"country\",\n",
+    "            \"1501200:CONSTRUCTION [1501200]\": \"wbcci\",\n",
+    "        }\n",
+    "    )\n",
     ")\n",
-    "icp = icp[~icp.wbcci.isnull()]\n",
+    "icp[\"wbcci\"] = icp[\"wbcci\"].astype(\"float64\")\n",
     "\n",
     "# filter by year and price level index (world avg = 100) variable\n",
     "icp = icp[\n",
