--- a/notebooks/country_level_ypk/ypk1_data_acquisition.ipynb
+++ b/notebooks/country_level_ypk/ypk1_data_acquisition.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "edabb14d",
    "metadata": {},
    "source": [
     "## Data acquisition notebook for historical, country-level GDP (`Y`), population (`P`), and capital (`K`) information\n",
@@ -14,6 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0f7330e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,6 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "53c7865b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,6 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "74f3574c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,6 +75,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "50ed8928",
    "metadata": {},
    "source": [
     "## Fetching all raw data from various sources\n",
@@ -81,6 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "50973c9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,6 +109,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "11404f8e",
    "metadata": {},
    "source": [
     "### Maddison Project Dataset"
@@ -111,6 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "f96de447",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,6 +135,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8f100b8a",
    "metadata": {},
    "source": [
     "### World Bank WDI: Investment-to-GDP ratio, GDP and GDPpc (nominal and PPP), and Population"
@@ -135,6 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "ba8e5a33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,6 +192,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "80cc91c0",
    "metadata": {},
    "source": [
     "### WB WDI: exchange rate"
@@ -190,6 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "63a7fa1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,6 +226,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "26883676",
    "metadata": {},
    "source": [
     "### UN WPP populations (overall and by-population-group data)"
@@ -222,6 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "c1b1c3f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,6 +258,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a7b81d70",
    "metadata": {},
    "source": [
     "### Åland Island GDP and population\n",
@@ -254,6 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "f741f437",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,6 +297,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1fa3375f",
    "metadata": {},
    "source": [
     "### LitPop (Eberenz et al. 2020, Earth Syst. Sci. Data)\n",
@@ -291,6 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "855a8cca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,6 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "644f89d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,6 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e395a2a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,6 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a3314695",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,6 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "631a49a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,6 +402,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b8bc2278",
    "metadata": {},
    "source": [
     "#### Un-tar and clear storage\n",
@@ -390,6 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
+   "id": "e0f53b3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,6 +428,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d0aeeed3",
    "metadata": {},
    "source": [
     "### GEG-15\n",
@@ -414,6 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "50e92300",
    "metadata": {},
    "outputs": [
     {
@@ -456,6 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
+   "id": "a3c224ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +492,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "id": "7919ccd3",
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Further data requiring separate instructions\n",
     "\n",
@@ -541,7 +571,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -555,7 +585,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.9.10"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
